--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,23 +1,22 @@
 
 server.port=8076
 
-spring.datasource.url=jdbc:mysql://localhost:3306/flowers?serverTimezone=UTC
+#spring.datasource.url=jdbc:mysql://localhost:3306/flowers?serverTimezone=UTC
+#spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+#spring.datasource.username=bestuser
+#spring.datasource.password=bestuser
+
+spring.datasource.url=jdbc:mysql://aamxjgf9qq5krg.crl4myardmzr.me-south-1.rds.amazonaws.com:3306/ebdb?serverTimezone=UTC
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.username=bestuser
-spring.datasource.password=bestuser
+spring.datasource.username=usernamefl
+spring.datasource.password=passwordfl
 
 spring.jpa.hibernate.ddl-auto=update
 
-#spring.liquibase.change-log=classpath:liquibase/db.changelog-master.xml
-#spring.liquibase.url=jdbc:mysql://localhost:3306/flowers?serverTimezone=UTC&useSSL=false
-#spring.liquibase.user=bestuser
-#spring.liquibase.password=bestuser
 
 jwt.token.secret=jwtuser
 jwt.token.expired=3600000
-#jwt.token.secret=jwtappdemo
-#jwt.token.expired=3600000
-#spring.main.allow-circular-references=true
+
 
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
